k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-platform
  labels:
    app: devops-local-platform
    environment: local
