k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-svc
  namespace: devops-platform
  labels:
    app: devops-api
spec:
  selector:
    app: devops-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
